# tinyrenderer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
tgaimage/: Cargo.toml
tgaimage/src/: lib.rs
tinyrenderer/: Cargo.toml
tinyrenderer/examples/: lesson1.rs  lesson1_1.rs  lesson2.rs  lesson3.rs  texture_load.rs
tinyrenderer/src/: geometry.rs  lib.rs  line.rs  main.rs  model.rs  point.rs
