[package]
name = "tinyrenderer"
version = "0.1.0"
authors = ["Vladimir Petrigo <vladimir.petrigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgaimage = { path = "../tgaimage" }
num = "0.3"
num-traits = "0.2"

[dev-dependencies]
rand = "0.7"

